--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
       <div style="padding: 15px;">
           
         <button style="padding: 0;margin:0;border:none;background-color:transparent;">
-          <img src="in.png" style="width: 35px;height: 35px;">
+          <a href="https://www.linkedin.com/in/abbas-zaidan-842524231/" target="_blank" rel="noopener noreferrer">
+            <img src="in.png" style="width: 35px;height: 35px;">
+          </a>
         </button>
         <button style="padding: 0;margin:0;border:none;background-color:transparent;position:relative; bottom: 8px;">
-          <img src="git.png" style="width: 25px;height: 25px;">
+          <a href="https://github.com/zaidanabbas/" target="_blank" rel="noopener noreferrer">
+            <img src="git.png" style="width: 25px;height: 25px;">
+          </a>
         </button>
       </div>
     </nav>
